# toggle-chrome-google-translate

./: README.md  pyproject.toml  toggle.bat  toggle.py  togglew.bat
